# sniffing-rust-code

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/examples/: dst_deep_dive.rs  error_handling_patterns.rs  iterator_patterns.rs  mod.rs
